minor UI fix, fixed a ui bug for clerk userButton on small screens

--- a/app/globals.css
+++ b/app/globals.css
@@ -127,3 +127,9 @@ body,
     @apply bg-background text-foreground;
   }
 }
+
+.cl-popoverBox {
+  position: absolute;
+  left: unset !important;
+  right: 15px !important;
+}
